--- a/src/tupelo/datomic.adoc
+++ b/src/tupelo/datomic.adoc
@@ -1,5 +1,4 @@
 
-
 = Tupelo: Making Datomic Even Sweeter
 
 Leiningen coordinates:   
@@ -289,7 +288,7 @@ entities:
 
 == Using Datomic Partitions
 
-Datomic allows the user to create 'partitions' within the DB.  Datomic partitions serve solely as 
+Datomic allows the user to create `partitions` within the DB.  Datomic partitions serve solely as 
 a structural optimization, and do not control or limit how or by whom datoms may be accessed.  The
 effect of a partition in Datomic is to effectively "pre-sort" all entities in that partition so that
 they are adjacent in storage, which _may_ improve access times for related entities that are often
@@ -313,6 +312,20 @@ In Tupelo Datomic, we may easily create and use partitions:
     (is (= :people ; verify the partition name for Honey's EID
            (td/partition-name (live-db) honey-eid))))
 ----
+
+In addition to keeping related entities adjacent in storage, one may also look up all entities in a
+given partition by using the `(td/partition-eids ...)` function:
+
+[source,clojure]
+----
+    ; Show that only Honey is in the people partition
+    (let [people-eids           (td/partition-eids (live-db) :people)
+          people-entity-maps    (map #(td/entity-map (live-db) %) people-eids) ]
+      (is (= people-entity-maps [
+               {:person/name "Honey Rider", :weapon/type #{:weapon/knife}, 
+                :location "Caribbean"} ] )))
+----
+
 
 == Future Work
 
