--- a/src/tupelo/explicit.adoc
+++ b/src/tupelo/explicit.adoc
@@ -15,52 +15,10 @@ unpredictable (at least to you) code behavior.  Of course, since the code may
 be run in a different context at some point in the future, what once worked
 predictably can later become unpredictable (i.e. a bug).  
 
-==== Map manipulation
+=== tupelo.explicit - Explicit Language for Clojure
 
-Maps are convenient, especially when keywords are used as functions to look up a value in
-a map.  Unfortunately, attempting to look up a non-existing keyword in a map will return
-`nil`.  While sometimes convenient, this means that a simple typo in the keyword name will
-silently return corrupted data (i.e. `nil` instead of the desired value.  The two funcitons
-`tupelo.explicit/get` and `tupelo.explicit/get-in` are drop-in replacements for `get`
-and `get-in`, except that they will throw an Exception in the event the keyword is not
-present in the map.  Usage is illustrated below:
+Clojure tries to be flexible and return reasonable default value (usually `nil`) when
+something goes wrong (for example, looking up a non-existent key in a map).  The functions in 
+`tupelo.explicit` disable this behavior and instead implement a "fail-fast" philosophy.
 
-[source,clojure]
-----
-(tupelo.explicit/get m k)
-  A fail-fast version of clojure.core/get. For map m & key k, returns
-  the value v associated with k in m.  Throws an exception if k is not
-  present in m.
-
-(tupelo.explicit/get-in m ks)
-  A fail-fast version of clojure.core/get-in. For map m & keys ks,
-  returns the value v associated with ks in m, as for (get-in m ks).
-  Throws an exception if the path ks is not present in m.
-----
-
-Then, whenever you want to perform key-based lookup in maps, just use
-`tupelo.explicit` instead of the `clojure.core` version:
-
-[source,clojure]
-----
-user=> (require '[tupelo.explicit :as x])
-
-user=> (def m {:a 1 :b 2})
-user=> (x/get m :a)
-1
-user=> (x/get m :c)
-;=> IllegalArgumentException Key not present in map:
-;=>   map: {:b 2, :a 1}
-;=>   key: :c
-;=>   tupelo.explicit/get (explicit.clj:23)
-
-user=> (def mm {:a 1 :b {:c 3}})
-user=> (x/get-in mm [:b :c])
-3
-user=> (x/get-in mm [:b :z])
-;=> IllegalArgumentException Key seq not present in map:
-;=>   map : {:b {:c 3}, :a 1}
-;=>   keys: [:b :z]
-;=>   tupelo.explicit/get-in (explicit.clj:34)
-----
 
