--- a/README.adoc
+++ b/README.adoc
@@ -463,8 +463,20 @@ An extract from the unit tests illustrates the use of `rel=`
 === Keeping & Dropping Elements of a Sequence
 
 When processing sequences of data, we often need to extract a sequence of desired data, or,
-conversely, remove all of the undesired elements. Here are a pair of (lazy) functions to perform
-these tasks:
+conversely, remove all of the undesired elements. 
+Have you ever been left wondering which of these two forms is correct?
+
+[source,clojure]
+----
+(let [result (filter even? (range 10)) ]
+  (assert (or (= result [ 1 3 5 7 9 ] )     ; is it "remove bad" (falsey) 
+              (= result [ 0 2 4 6 8 ] ))))  ; or    "keep good"  (truthy) ???
+----
+
+I normally think of filters as removing bad things.  Air filters remove dust.  Coffee filters keep
+coffee grounds out of my cup. A noise filter in my stereo removes contaminating frequencies from my
+music. However, `filter` in Clojure is written in reverse, so that it *_keeps_* items identified by
+the predicate. Wouldn't be nicer (and much less ambiguous) if you could just write the following?
 
 [source,clojure]
 ----
@@ -472,20 +484,10 @@ these tasks:
                     (drop-if odd?  (range 10))))
 ----
 
-Of course, these are just thin wrappers around the built-in `clojure.core` functions, but they are
-much less ambiguous.  Without these, I am constantly trying to remember which case is correct:
-
-----
-  (is (= (filter even? (range 10)) [1 3 5 7 9] )) ; do we     "remove bad" (falsey) items?
-                                                  ;   or
-  (is (= (filter even? (range 10)) [0 2 4 6 8] )) ; or do we  "keep good" (truthy) items?
-----
-
-I normally think of filters as removing bad things.  Air filters remove dust.  Coffee filters keep
-coffee grounds out of my cup. A noise filter in my stereo removes contaminating frequencies from my
-music. However, `filter` in Clojure is written in reverse, so that it *_keeps_* items identified by
-the predicate. It seems to me that `keep-if` and `drop-if` are much more natural names and remove
-ambiguity from the code.
+It seems to me that `keep-if` and `drop-if` are much more natural names and remove ambiguity from
+the code.  Of course, these are just thin (& lazy) wrappers around the built-in `clojure.core`
+functions, but they are much less ambiguous. I think they make the code easier to read and the
+intent more obvious.
 
 === String Operations
 
